@@ -2,6 +2,9 @@
 Dingus codenamed "IC2005 demo"
 ========
 
+050502: Animation stuff can take arbitrary time sources, not only system
+		time. Also refactored to use time_values instead of floats
+		for anim start times. time_value::fromsec() bugfix.
 050424: Dynamic geometry buffers issue warning when reached full capacity.
 		Character animator can start anims not only from current time.
 050422: Removed old unused GUI stuff from gfx/gui.
